# mailpail

./: .gitignore  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  justfile  pyproject.toml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
src/aol_email_exporter/: __main__.py  client.py  cookie_auth.py  filters.py  logging_config.py  models.py  providers.py
src/aol_email_exporter/exporters/: __init__.py  csv_export.py  excel_export.py  pdf_export.py
src/aol_email_exporter/ui/: __init__.py  app.py  theme.py
src/aol_email_exporter/ui/screens/: complete.py  filters.py  folders.py  formats.py  login.py  progress.py  welcome.py
src/mailpail/: __init__.py  __main__.py  auth.py  batch.py  client.py  cookie_auth.py  credentials.py  filters.py  logging_config.py  models.py  plugin.py  providers.py
src/mailpail/exporters/: __init__.py  attachments.py  csv_export.py  eml_export.py  excel_export.py  export_log.py  incremental.py  manifest.py  mbox_export.py  pdf_export.py  zipper.py
src/mailpail/ui/: app.py  strings.py  theme.py
src/mailpail/ui/screens/: base.py  complete.py  filters.py  folders.py  formats.py  login.py  (+2 more)
tests/: UI_TEST_PLAN.md  __init__.py  conftest.py  test_ui_integration.py
tests/tier_a/: test_aol_pipeline.py  test_app_password_guidance.py  test_attachments.py  test_batch.py  test_cli.py  test_client.py  test_csv_export.py  test_e2e_pipeline.py  test_eml_export.py  test_excel_export.py  test_export_log.py  test_filters.py  test_incremental.py  test_live_imap.py  test_logging.py  test_manifest.py  test_mbox_export.py  test_pdf_export.py  test_zipper.py
tests/tier_b/: test_aol_regression.py  test_edge_cases.py  test_fitness.py  test_format_fidelity.py  test_gui_integration.py  test_phase2_features.py  test_phase3_features.py
