[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailpail"
version = "0.4.0"
description = "Download and export your email to PDF, Excel, and compressed CSV"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    {name = "Eric C. Mumford", email = "eric@mumfordengineering.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "imap-tools>=1.7.0",
    "openpyxl>=3.1.0",
    "fpdf2>=2.8.0",
    "customtkinter>=5.2.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
cookies = [
    "browser-cookie3>=0.20.0",
]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "pyinstaller>=6.0",
    "browser-cookie3>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/heymumford/mailpail"
Repository = "https://github.com/heymumford/mailpail"

[project.scripts]
mailpail = "mailpail.__main__:main"

[project.gui-scripts]
mailpail-gui = "mailpail.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mailpail"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "tier_a: Must-pass product feature scenarios",
    "tier_b: Regression and edge case tests",
    "gui: Requires display + tkinter (skipped in headless CI)",
]
addopts = "-v --tb=short --ignore=tests/test_ui_integration.py -m \"not gui\""

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["mailpail"]
